[package]
name = "claudestine"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.2.0"
toml = "1.1.2"
